# wiktionary

./: .gitignore  README.md  pyproject.toml  wiktionary.py
